The spacing for the mobile is fixed

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ img{
     font-family: "Raleway", sans-serif;
 
 }
+h2{
+    font-size: 24px;
+    line-height: 1.35;
+}
 .container{
     width: 90%;
     max-width: 900px;
@@ -24,11 +28,15 @@ img{
 .nav--bar{
     display: flex;
     justify-content: space-between;
+    /* border: 1px solid white; */
+    padding: 12px 16px;
+    align-items: center;
 }
 .nav--bar img{
 
 width: 35%;
-max-width: 70px;    
+max-width: 70px; 
+/* height: auto;*/
 }
 .nav--list{
     color: white;
@@ -48,6 +56,7 @@ max-width: 70px;
     display: flex;
     justify-content: center;
     margin-top: 2em;
+    padding: 24px 16px;
 }
 .illustrate img{
     width: 90%;
@@ -68,7 +77,7 @@ max-width: 70px;
     text-align: center;
 }
 .first--text{
-    font-size: 0.8em;
+    font-size: 1em;
 }
  button{
     width: 75%;
@@ -93,12 +102,21 @@ input{
     font-weight: 600;
     font-family: "Open Sans", sans-serif;
 }
+.section{
+    padding: 32px 16px;
+    margin-bottom: 32px;
+}
+.section--first{
+    /* border: 1px solid white; */
+    
+}
 .section--second{
    display: flex;     
    flex-direction: column;
    max-width: 750px;
    /* border: 1px solid white; */
    margin: 0 auto;
+   padding: 32px 16px;
 }
 .second--container{
     display: flex;
@@ -108,10 +126,11 @@ input{
     max-width: 300px;
     margin-bottom: 1em;
     margin-top: 1em;
+    padding: 24px 16px;
     /* margin: 1em 1em; */
 }
 .second--text ,.third--text{
-    font-size: 0.8em;
+    font-size: 1em;
     text-align: left;
     width: 95%;
     margin: 0 auto;
@@ -166,6 +185,7 @@ input{
     flex-direction: column;
     align-items: center;
     max-width: 600px;
+    padding: 32px 16px;
 }
 .section--footer{
     color: white;
@@ -188,6 +208,9 @@ input{
     margin: 0;
     padding: 0;
     margin-bottom: 1em;
+}
+.footer--item{
+    margin-bottom: 0.75rem;
 }
 @media (min-width : 800px){
     
